tests/focus-check/focus-check.exp

Stop any already-running server.
Full check:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  3: (require('./b'): number);
                      ^^^^^^ number

Error: test.js:3
  3: ("": number);
      ^^ string. This type is incompatible with
  3: ("": number);
          ^^^^^^ number


Found 2 errors

Focused check on a file with local errors but no dependency or reverse dependency:
Error: test.js:3
  3: ("": number);
      ^^ string. This type is incompatible with
  3: ("": number);
          ^^^^^^ number


Found 1 error

Focused check on a file with no local errors but a dependency:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  3: (require('./b'): number);
                      ^^^^^^ number


Found 1 error

Focused check on a file with no local errors but a reverse dependency:
Error: a.js:3
  3: (require('./b'): number);
      ^^^^^^^^^^^^^^ string. This type is incompatible with
  3: (require('./b'): number);
                      ^^^^^^ number


Found 1 error

Done!
